[tool.poetry]
name = "bothanasius"
version = "0.1.0"
description = ""
authors = ["Bryan Forbes <bryan@reigndropsfall.net>"]
license = "BSD-3-Clause"

[tool.poetry.dependencies]
python = "^3.7"
aiodns = "^2.0"
alembic = "^1.0"
cchardet = "^2.1"
psycopg2 = "^2.7"
"botus_receptus" = {rev = "a24e2de3bfd608cbe146440b195e7263a737130e", git = "https://github.com/bryanforbes/botus_receptus.git", extras = ["gino_typed", "uvloop", "more_itertools"]}
pendulum = {git = "https://github.com/bryanforbes/pendulum.git", branch = "update-for-pep-561"}
gino-stubs = {rev = "7af0c386fa82177d8003d19987605752b8022c62", git = "https://github.com/bryanforbes/gino-stubs.git"}

[tool.poetry.dev-dependencies]
black = "^19.3b0"
flake8 = "^3.6"
flake8-bugbear = "^19.3"
flake8-pyi = "^19.1"
mypy = "^0.701"
pre-commit = "^1.12"
pytest = "^4.0.0"
pytest-asyncio = "^0.10.0"
pytest-cov = "^2.6"
pytest-flake8 = "^1.0"
pytest-mock = "^1.10"
pytest-mypy = "^0.3.2"
pytest-xdist = "^1.24"

[tool.poetry.scripts]
bothanasius = 'bothanasius.run:main'

[tool.black]
line-length = 88
py36 = true
skip-string-normalization = true
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.pytest_cache
  | \.venv
  | alembic
  | htmlcov
)/
'''

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
